# liquidity-report

./: .gitignore  CLAUDE.md  README.md  USER_GUIDE.md  api_futures_fundingRate_exchange_list.parquet  axisfix.md  changefiles.md  datafix.md  findings.md  funding_rate_calculation_method.md  fundingplan.md  futurevolume.md  implementation_summary.md  main.py  modify_api_files.py  plan.md  pyproject.toml  refresh_time.py  report.py  requirements.txt  table.md
coinglass-api/etf/: api_etf_bitcoin_aum.py  api_etf_bitcoin_detail.py  api_etf_bitcoin_detail.py.time.bak  api_etf_bitcoin_flow_history.py  api_etf_bitcoin_history.py  api_etf_bitcoin_history.py.time.bak  api_etf_bitcoin_list.py  api_etf_bitcoin_list_modified.py  api_etf_bitcoin_net_assets_history.py  api_etf_bitcoin_premium_discount_history.py  api_etf_bitcoin_price_history.py  api_etf_bitcoin_price_history.py.time.bak  api_etf_ethereum_flow_history.py  api_etf_ethereum_list.py  api_etf_ethereum_net_assets_history.py  api_grayscale_holdings_list.py  api_grayscale_premium_history.py  api_hk_etf_bitcoin_flow_history.py
coinglass-api/indic/: api_bitfinex_margin_long_short.py  api_bitfinex_margin_long_short.py.bak  api_bitfinex_margin_long_short.py.time.bak  api_borrow_interest_rate_history.py  api_borrow_interest_rate_history.py.bak  (+21 more)
notes/: adjust_time.py  change-files.py  clean_backups.py  edit_time.py  exchanges.csv  limit-change.py  logs-plan.md  notes.md  remove_duplicates.py  report-api-files.md  symbol-files.py  target_data.csv
streamlit/: app.py  data_guide.md  frontend.md  streamlit-plan.md  test_chart.py
(+19646 files in other folders)
