[project]
name = "izun-liquidity-report-v5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.0",,
    "pyarrow>=14.0.1",
]
